# nivasa

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  clippy.toml  deny.toml  nivasa-framework-implementation-plan.md  request-lifecycle.md  rustfmt.toml  todo.md
benches/: Cargo.toml  check_hello_world_budget.sh  di_resolution.rs  hello_world.rs  pipeline_overhead.rs  routing.rs  startup_modules.rs
benches/src/: lib.rs
docs/: README.md  (+24 more)
examples/auth-jwt/: Cargo.toml  README.md
examples/auth-jwt/src/: app_module.rs  main.rs
examples/crud-rest-api/: Cargo.toml  README.md
examples/crud-rest-api/src/: app_module.rs  main.rs
nivasa/: Cargo.toml
nivasa-cli/: Cargo.toml
nivasa-cli/src/: main.rs  statechart.rs
nivasa-cli/statecharts/: nivasa.application.scxml  nivasa.module.scxml  nivasa.provider.scxml  nivasa.request.scxml
nivasa-cli/tests/: cli.rs  generate_registration.rs  info.rs
nivasa-common/: Cargo.toml
nivasa-common/src/: exceptions.rs  http_status.rs  lib.rs
nivasa-common/tests/: common_api.rs
nivasa-config/: Cargo.toml
nivasa-config/src/: lib.rs
nivasa-config/tests/: validation_helper.rs
nivasa-core/: Cargo.toml  build.rs
nivasa-core/src/: container.rs  lib.rs  lifecycle.rs  module.rs  reflector.rs  testing.rs
nivasa-core/src/di/: container.rs  error.rs  graph.rs  lazy.rs  lifecycle.rs  mod.rs  provider.rs  registry.rs
nivasa-core/src/module/: dynamic.rs  event_emitter.rs  lifecycle.rs  mod.rs  orchestrator.rs  registry.rs  runtime.rs
nivasa-core/tests/: di_integration.rs  dynamic_modules.rs  event_emitter.rs  mock_provider.rs  module_composition.rs  module_lifecycle.rs  module_registry_helper_edges.rs  module_registry_helpers.rs  reflector.rs  testing_module.rs  testing_override_real_provider.rs
nivasa-filters/: Cargo.toml
nivasa-filters/src/: lib.rs
nivasa-filters/tests/: http_exception_summary.rs
nivasa-graphql/: Cargo.toml
nivasa-graphql/src/: lib.rs
nivasa-graphql/tests/: graphql_federation.rs  graphql_module.rs
nivasa-guards/: Cargo.toml
nivasa-guards/src/: lib.rs
nivasa-guards/tests/: coverage.rs  throttler_context_edges.rs
nivasa-http/: Cargo.toml
nivasa-http/src/: body.rs  graphql.rs  graphql_playground.rs  health.rs  lib.rs  logging.rs  pipeline.rs  request.rs  response.rs  server.rs  testing.rs  throttling.rs  upload.rs
nivasa-http/tests/: auth_flow.rs  body_edges.rs  compression_middleware.rs  controller_system.rs  cors_preflight_blank_request_method.rs  cors_preflight_empty_allow_headers.rs  cors_preflight_options_method.rs  dispatch_not_found_request_id.rs  dispatch_request_id_edges.rs  download_filename_escape.rs  download_response.rs  error_handling_pipeline.rs  filter_precedence.rs  global_filter_matching.rs  global_filters.rs  graceful_shutdown.rs  graphql.rs  graphql_playground.rs  header_map_extraction.rs  health_checks.rs  http_exception_response.rs  http_smoke.rs  interceptor_cache.rs  interceptor_di.rs  interceptor_foundation.rs  interceptor_logging.rs  interceptor_response_mapping.rs  logger_middleware.rs  logger_service.rs  middleware_di.rs  middleware_foundation.rs  openapi_spec_endpoint.rs  pipe_di.rs  query_extractor.rs  request_lifecycle_integration.rs  request_pipeline.rs  response_contract.rs  response_helper_branch_slice.rs  response_helper_edges.rs  server_core.rs  (+15 more)
nivasa-interceptors/: Cargo.toml
nivasa-interceptors/src/: lib.rs
nivasa-interceptors/tests/: execution_context.rs
nivasa-macros/: Cargo.toml
nivasa-macros/src/: config_schema.rs  controller.rs  filter.rs  graphql.rs  injectable.rs  lib.rs  marker_metadata.rs  middleware.rs  module_macro.rs  on_event.rs  schedule.rs  scxml_handler.rs  subscribe_message.rs  validation.rs  websocket_gateway.rs
nivasa-macros/tests/: config_schema.rs  controller.rs  controller_doc_markers.rs  controller_edge_cases.rs  filter.rs  graphql.rs  injectable.rs  interceptor.rs  lib_surface.rs  middleware.rs  module.rs  module_helpers.rs  noop_attrs.rs  on_event.rs  schedule.rs  scxml_handler.rs  subscribe_message.rs  throttle.rs  validation.rs  validation_trybuild.rs  websocket_connected_socket.rs  websocket_gateway.rs  websocket_message_body.rs  websocket_subscribe_message.rs
nivasa-macros/tests/trybuild/: config_schema_duplicate_default.rs  config_schema_duplicate_default.stderr  config_schema_pass.rs  config_schema_tuple_struct.rs  config_schema_tuple_struct.stderr  config_schema_unknown_key.rs  config_schema_unknown_key.stderr  controller_api_bearer_auth_invalid.rs  controller_api_bearer_auth_invalid.stderr  controller_api_bearer_auth_pass.rs  controller_api_body_invalid.rs  (+348 more)
nivasa-pipes/: Cargo.toml
nivasa-pipes/src/: lib.rs
nivasa-pipes/tests/: parse_pipes.rs
nivasa-routing/: Cargo.toml
nivasa-routing/src/: lib.rs
nivasa-routing/tests/: route_registry.rs  versioned_dispatch_all_fallback.rs  versioned_dispatch_method_normalization.rs  versioning.rs
nivasa-scheduling/: Cargo.toml
nivasa-scheduling/src/: lib.rs
nivasa-scheduling/tests/: cron_module.rs  runtime_edges.rs
nivasa-statechart/: Cargo.toml  build.rs
nivasa-statechart/src/: codegen.rs  engine.rs  lib.rs  parser.rs  schema.rs  types.rs  validator.rs
nivasa-statechart/tests/: generated_statecharts.rs  parser_coverage.rs  parser_default_edges.rs  parser_empty_child_edges.rs  schema_validation.rs  types_and_validator_edges.rs  validator_missing_initial_edge.rs
nivasa-validation/: Cargo.toml
nivasa-validation/src/: lib.rs
nivasa-validation/tests/: public_api.rs
nivasa-websocket/: Cargo.toml
nivasa-websocket/src/: lib.rs
nivasa-websocket/tests/: broadcast.rs  websocket_functional_edges.rs  websocket_handshake.rs  websocket_helper_edges.rs  websocket_helper_missing_namespace.rs  websocket_lifecycle.rs  websocket_membership_lifecycle_edges.rs  websocket_namespace.rs  websocket_registry_helpers.rs
nivasa/src/: application.rs  lib.rs  openapi.rs
nivasa/tests/: module_composition_integration.rs  openapi_spec.rs  openapi_spec_validation.rs  public_api.rs  swagger_ui_assets.rs  swagger_ui_route.rs
(+35 files in other folders)
