[workspace]
resolver = "2"
members = [
    "nivasa",
    "nivasa-core",
    "nivasa-statechart",
    "nivasa-macros",
    "nivasa-http",
    "nivasa-routing",
    "nivasa-guards",
    "nivasa-interceptors",
    "nivasa-pipes",
    "nivasa-filters",
    "nivasa-validation",
    "nivasa-config",
    "nivasa-common",
    "nivasa-websocket",
    "nivasa-cli",
    "nivasa-scheduling",
    "nivasa-graphql",
    "benches",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gauravsaini/nivasa"
keywords = ["web-framework", "nestjs", "dependency-injection", "scxml", "statechart"]
categories = ["web-programming::http-server"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"

# Tower middleware ecosystem
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# XML parsing (SCXML)
quick-xml = { version = "0.37", features = ["serialize"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

# Async traits
async-trait = "0.1"

# Scheduling
chrono = { version = "0.4", features = ["clock"] }
cron = "0.16.0"

# GraphQL
async-graphql = { version = "=7.0.17", default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tokio-test = "0.4"

[profile.mutants]
inherits = "test"
debug = 0
