[package]
name = "nivasa-benchmarks"
description = "Nivasa framework benchmark harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
actix-web = "4"
async-trait = "0.1"
bytes = { workspace = true }
criterion = "0.5"
http = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
axum = "0.8"
nivasa-core = { path = "../nivasa-core" }
nivasa-common = { path = "../nivasa-common" }
nivasa-guards = { path = "../nivasa-guards" }
nivasa-interceptors = { path = "../nivasa-interceptors" }
nivasa-http = { path = "../nivasa-http" }
nivasa-routing = { path = "../nivasa-routing" }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "di_resolution"
path = "di_resolution.rs"
harness = false

[[bench]]
name = "hello_world"
path = "hello_world.rs"
harness = false

[[bench]]
name = "routing"
path = "routing.rs"
harness = false

[[bench]]
name = "pipeline_overhead"
path = "pipeline_overhead.rs"
harness = false

[[bench]]
name = "startup_modules"
path = "startup_modules.rs"
harness = false
