[package]
name = "nivasa-cli"
description = "CLI tool for the Nivasa framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "nivasa"
doc = false
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nivasa-statechart = { version = "0.1.0", path = "../nivasa-statechart" }
serde_json = { workspace = true }
