[package]
name = "nivasa-common"
description = "Shared types for the Nivasa framework — HttpException, DTOs, result types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
