[package]
name = "nivasa-config"
description = "Nivasa framework — config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15"
nivasa-common = { path = "../nivasa-common" }
nivasa-core = { path = "../nivasa-core" }
