[package]
name = "nivasa-config"
description = "Environment and file-based configuration loading, ConfigService, and type-safe config schemas for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dotenvy = "0.15"
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
nivasa-core = { version = "0.1.0", path = "../nivasa-core" }
