[package]
name = "nivasa-core"
description = "Core module system, DI container, and application lifecycle for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
nivasa-statechart = { version = "0.1.0", path = "../nivasa-statechart" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
nivasa-macros = { version = "0.1.0", path = "../nivasa-macros" }

[build-dependencies]
nivasa-statechart = { version = "0.1.0", path = "../nivasa-statechart" }
