[package]
name = "nivasa-filters"
description = "Exception filter trait, built-in HTTP exception filter, and global filter pipeline for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
