[package]
name = "nivasa-http"
description = "Nivasa framework — http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
tls = ["dep:rustls", "dep:tokio-rustls"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
http-body-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
multer = "3.1"
nivasa-common = { path = "../nivasa-common" }
nivasa-filters = { path = "../nivasa-filters" }
nivasa-guards = { path = "../nivasa-guards" }
nivasa-interceptors = { path = "../nivasa-interceptors" }
nivasa-routing = { path = "../nivasa-routing" }
nivasa-statechart = { path = "../nivasa-statechart" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
nivasa-core = { path = "../nivasa-core" }
nivasa-macros = { path = "../nivasa-macros" }
rustls-pemfile = "2"
tower-http = { workspace = true }
