[package]
name = "nivasa-http"
description = "Nivasa framework — http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
compression-gzip = ["dep:flate2"]
compression-deflate = ["dep:flate2"]
compression-brotli = ["dep:brotli"]
tls = ["dep:rustls", "dep:tokio-rustls"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
flate2 = { version = "1", optional = true }
brotli = { version = "8", optional = true }
http-body-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
multer = "3.1"
nivasa-common = { path = "../nivasa-common" }
nivasa-core = { path = "../nivasa-core" }
nivasa-filters = { path = "../nivasa-filters" }
nivasa-guards = { path = "../nivasa-guards" }
nivasa-interceptors = { path = "../nivasa-interceptors" }
nivasa-pipes = { path = "../nivasa-pipes" }
nivasa-routing = { path = "../nivasa-routing" }
nivasa-statechart = { path = "../nivasa-statechart" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
tower = { workspace = true }
url = "2"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
nivasa-macros = { path = "../nivasa-macros" }
nivasa-validation = { path = "../nivasa-validation" }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
