[package]
name = "nivasa-http"
description = "Nivasa framework — http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
compression-gzip = ["dep:flate2"]
compression-deflate = ["dep:flate2"]
compression-brotli = ["dep:brotli"]
tls = ["dep:rustls", "dep:tokio-rustls"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
flate2 = { version = "1", optional = true }
brotli = { version = "8", optional = true }
http-body-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
multer = "3.1"
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
nivasa-core = { version = "0.1.0", path = "../nivasa-core" }
nivasa-filters = { version = "0.1.0", path = "../nivasa-filters" }
nivasa-guards = { version = "0.1.0", path = "../nivasa-guards" }
nivasa-interceptors = { version = "0.1.0", path = "../nivasa-interceptors" }
nivasa-pipes = { version = "0.1.0", path = "../nivasa-pipes" }
nivasa-routing = { version = "0.1.0", path = "../nivasa-routing" }
nivasa-graphql = { version = "0.1.0", path = "../nivasa-graphql" }
async-graphql = { workspace = true }
nivasa-statechart = { version = "0.1.0", path = "../nivasa-statechart" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
tower = { workspace = true }
url = "2"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
nivasa-macros = { version = "0.1.0", path = "../nivasa-macros" }
nivasa-validation = { version = "0.1.0", path = "../nivasa-validation" }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
