[package]
name = "nivasa-interceptors"
description = "Nivasa framework — interceptors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nivasa-common = { path = "../nivasa-common" }
serde = { workspace = true }
serde_json = { workspace = true }
