[package]
name = "nivasa-interceptors"
description = "Nivasa framework — interceptors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
serde = { workspace = true }
serde_json = { workspace = true }
