[package]
name = "nivasa-macros"
description = "Procedural macros for the Nivasa framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
quick-xml = { workspace = true }

[dev-dependencies]
nivasa-core = { path = "../nivasa-core" }
nivasa-filters = { path = "../nivasa-filters" }
nivasa-routing = { path = "../nivasa-routing" }
async-trait = { workspace = true }
trybuild = "1"
