[package]
name = "nivasa-macros"
description = "Procedural macros for the Nivasa framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
quick-xml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nivasa-core = { version = "0.1.0", path = "../nivasa-core" }
nivasa-http = { version = "0.1.0", path = "../nivasa-http" }
nivasa-filters = { version = "0.1.0", path = "../nivasa-filters" }
nivasa-routing = { version = "0.1.0", path = "../nivasa-routing" }
nivasa-pipes = { version = "0.1.0", path = "../nivasa-pipes" }
nivasa-scheduling = { version = "0.1.0", path = "../nivasa-scheduling" }
nivasa-validation = { version = "0.1.0", path = "../nivasa-validation" }
async-trait = { workspace = true }
serde_json = { workspace = true }
trybuild = "1"
