[package]
name = "nivasa-pipes"
description = "Nivasa framework — pipes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nivasa-common = { path = "../nivasa-common" }
nivasa-validation = { path = "../nivasa-validation" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
