[package]
name = "nivasa-pipes"
description = "Pipe trait and built-in data-transformation pipes (parse, validate, default, trim) for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
nivasa-validation = { version = "0.1.0", path = "../nivasa-validation" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
