[package]
name = "nivasa-routing"
description = "Route registry, path matching (static, parameterized, wildcard), and request dispatch for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
