[package]
name = "nivasa-statechart"
description = "SCXML statechart engine, parser, codegen, and runtime enforcement for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
libxml = "0.3.8"

[build-dependencies]
quick-xml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
libxml = "0.3.8"

[dev-dependencies]
tokio-test = { workspace = true }
