[package]
name = "nivasa-validation"
description = "Nivasa framework — validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
http = { workspace = true }
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
