[package]
name = "nivasa-websocket"
description = "Nivasa framework — websocket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
tokio-tungstenite = "0.27"
