[package]
name = "nivasa-websocket"
description = "WebSocket gateway, room/broadcast support, and tokio-tungstenite adapter for Nivasa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
tokio-tungstenite = "0.27"
