[package]
name = "nivasa"
description = "Nivasa — A modular, SCXML-driven Rust web framework with NestJS pattern compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nivasa-core = { path = "../nivasa-core" }
nivasa-common = { path = "../nivasa-common" }
nivasa-statechart = { path = "../nivasa-statechart" }
nivasa-macros = { path = "../nivasa-macros" }
nivasa-http = { path = "../nivasa-http" }
nivasa-config = { path = "../nivasa-config", optional = true }
nivasa-validation = { path = "../nivasa-validation", optional = true }
nivasa-websocket = { path = "../nivasa-websocket", optional = true }

[features]
default = []
config = ["dep:nivasa-config"]
validation = ["dep:nivasa-validation"]
websocket = ["dep:nivasa-websocket"]
