[package]
name = "nivasa"
description = "Nivasa — A modular, SCXML-driven Rust web framework with NestJS pattern compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nivasa-core = { path = "../nivasa-core" }
nivasa-common = { path = "../nivasa-common" }
nivasa-guards = { path = "../nivasa-guards" }
nivasa-filters = { path = "../nivasa-filters" }
nivasa-pipes = { path = "../nivasa-pipes" }
nivasa-statechart = { path = "../nivasa-statechart" }
nivasa-macros = { path = "../nivasa-macros" }
nivasa-http = { path = "../nivasa-http" }
nivasa-interceptors = { path = "../nivasa-interceptors" }
nivasa-routing = { path = "../nivasa-routing" }
serde_json = { workspace = true }
nivasa-config = { path = "../nivasa-config", optional = true }
nivasa-validation = { path = "../nivasa-validation", optional = true }
nivasa-websocket = { path = "../nivasa-websocket", optional = true }

[dev-dependencies]
openapiv3 = "2.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

[features]
default = []
config = ["dep:nivasa-config"]
validation = ["dep:nivasa-validation"]
websocket = ["dep:nivasa-websocket"]
