[package]
name = "nivasa"
description = "Nivasa — A modular, SCXML-driven Rust web framework with NestJS pattern compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nivasa-core = { version = "0.1.0", path = "../nivasa-core" }
nivasa-common = { version = "0.1.0", path = "../nivasa-common" }
nivasa-guards = { version = "0.1.0", path = "../nivasa-guards" }
nivasa-filters = { version = "0.1.0", path = "../nivasa-filters" }
nivasa-pipes = { version = "0.1.0", path = "../nivasa-pipes" }
nivasa-statechart = { version = "0.1.0", path = "../nivasa-statechart" }
nivasa-macros = { version = "0.1.0", path = "../nivasa-macros" }
nivasa-http = { version = "0.1.0", path = "../nivasa-http" }
nivasa-interceptors = { version = "0.1.0", path = "../nivasa-interceptors" }
nivasa-routing = { version = "0.1.0", path = "../nivasa-routing" }
serde_json = { workspace = true }
tokio = { workspace = true }
nivasa-config = { version = "0.1.0", path = "../nivasa-config", optional = true }
nivasa-validation = { version = "0.1.0", path = "../nivasa-validation", optional = true }
nivasa-websocket = { version = "0.1.0", path = "../nivasa-websocket", optional = true }

[dev-dependencies]
openapiv3 = "2.2"
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

[features]
default = []
config = ["dep:nivasa-config"]
validation = ["dep:nivasa-validation"]
websocket = ["dep:nivasa-websocket"]
