[package]
name = "nivasa-example-auth-jwt"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
nivasa = { path = "../../nivasa", features = ["config"] }
nivasa-core = { path = "../../nivasa-core" }
nivasa-http = { path = "../../nivasa-http" }
nivasa-routing = { path = "../../nivasa-routing" }
async-trait = "0.1"

[workspace]
